Complete blogr app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <div class="container text-end my-1">
+      <%= link_to 'TODO_LINK', nil, class: 'btn btn-outline-primary btn-sm' %>
+    </div>
     <%= render 'shared/flash' %>
 
     <main role="main" class="container">
